--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>My Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
+        <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
     </ul>
 
 </body>
