--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -22,5 +22,20 @@
         <li><strong>Cheeses: </strong>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
         <li><strong>Egg: </strong>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
     </ul>
+    <br>
+    <h2>Steps</h2>
+    <p>The detailed layering instructions can be found in the recipe belowe, but this is the order you'll follow:</p>
+    <ol>
+        <li>Meat sauce</li>
+        <li>Noodles</li>
+        <li>Ricotta mixture</li>
+        <li>mozzarella slices</li>
+        <li>Meat sauce</li>
+        <li>Parmesan cheese</li>
+        <li>Repeat the layers, then top wth the remaining Parmesan.</li>
+    </ol>
+    <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.
+
+    </p>
 </body>
 </html>
