added home buttons to recipe

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -6,7 +6,7 @@
     <title>Apple Pie</title>
 </head>
 <body>
-    <h1>Applie Pie</h1>
+    <div><h1>Applie Pie</h1><a href="../index.html">Home</a></div>
     <img src="../images/apple-pie.jpg" alt="apple pie image">
     <h4>Homemade apple pie is always a good idea — and if you're looking for the best apple pie recipe of all time, you've come to the right place. Grandma Ople's recipe is one of our most popular recipes ever. Try it today to learn what all the hype is about!</h4>
     <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
