--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -6,7 +6,7 @@
     <title>Butter Chicken</title>
 </head>
 <body>
-    <h1>Butter Chicken</h1>
+    <div><h1>Butter Chicken</h1><a href="../index.html">Home</a></div>
     <img src="../images/butter-chicken.jpg" alt="butter chicken image">
     <h4>This butter chicken recipe, or chicken makhani, is one of my favorite Indian dishes. It features a full-flavored sauce that complements the chicken well. It can be made as mild or spicy as you wish by adjusting the cayenne. Serve with basmati rice and naan bread.</h4>
     <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below:</p>
