--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <div><h1>Lasagna</h1><a href="../index.html">Home</a></div>
     <img src="../images/lasagna.jpg" alt="lasagna image">
     <h4>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</h4>
     <p>Making Lasagna can be time-consuming, but he results are <em>well</em> worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.</p>
