lasagna center allignment

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,39 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../page.css">
     <title>Lasagna</title>
 </head>
 <body>
-    <div><h1>Lasagna</h1><a href="../index.html">Home</a></div>
-    <img src="../images/lasagna.jpg" alt="lasagna image">
-    <h4>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</h4>
-    <p>Making Lasagna can be time-consuming, but he results are <em>well</em> worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.</p>
-    <br>
-    <h2>Ingredients</h2>
-    <ul>
-        <li><strong>Meat: </strong>This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
-        <li><strong>Onion & garlic: </strong>An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
-        <li><strong>Tomato products: </strong>You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
-        <li><strong>Sugar: </strong>Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
-        <li><strong>Spices & seasonings: </strong>This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
-        <li><strong>Lasagna noodles: </strong>Use store-bought or <a href="#">homemade lasagna noodles</a>.</li>
-        <li><strong>Cheeses: </strong>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
-        <li><strong>Egg: </strong>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
-    </ul>
-    <br>
-    <h2>Steps</h2>
-    <p>The detailed layering instructions can be found in the recipe belowe, but this is the order you'll follow:</p>
-    <ol>
-        <li>Meat sauce</li>
-        <li>Noodles</li>
-        <li>Ricotta mixture</li>
-        <li>mozzarella slices</li>
-        <li>Meat sauce</li>
-        <li>Parmesan cheese</li>
-        <li>Repeat the layers, then top wth the remaining Parmesan.</li>
-    </ol>
-    <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.
+    <a href="../index.html">Home</a>
+    <div class="page-container">
+        <h1>Lasagna </h1>
+        <img src="../images/lasagna.jpg" alt="lasagna image" class="recipe-image">
+        <h4>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</h4>
+        <p>Making Lasagna can be time-consuming, but he results are <em>well</em> worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below.</p>
+        <br>
+        <div class="ingredients-steps">
+            <h2>Ingredients</h2>
+            <ul>
+                <li><strong>Meat: </strong>This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+                <li><strong>Onion & garlic: </strong>An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+                <li><strong>Tomato products: </strong>You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+                <li><strong>Sugar: </strong>Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+                <li><strong>Spices & seasonings: </strong>This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+                <li><strong>Lasagna noodles: </strong>Use store-bought or <a href="#">homemade lasagna noodles</a>.</li>
+                <li><strong>Cheeses: </strong>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+                <li><strong>Egg: </strong>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+            </ul>
+            <br>
+            <h2>Steps</h2>
+            <p>The detailed layering instructions can be found in the recipe belowe, but this is the order you'll follow:</p>
+            <ol>
+                <li>Meat sauce</li>
+                <li>Noodles</li>
+                <li>Ricotta mixture</li>
+                <li>mozzarella slices</li>
+                <li>Meat sauce</li>
+                <li>Parmesan cheese</li>
+                <li>Repeat the layers, then top wth the remaining Parmesan.</li>
+            </ol>
+        </div>
 
-    </p>
+        <p class="description">The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.
+
+        </p>
+    </div>
+    
 </body>
 </html>
