--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../home.css">
     <title>Recipe</title>
 </head>
 <body>
-    <h1>My Recipes</h1>
+    <h1 class="title">My Recipes</h1>
+    
+    <h1 class="known-dishes">Known Dishes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
-        <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
+        <li><a href="recipes/lasagna.html"><img src="../images/lasagna.jpg" alt="lasagna image" class="dish-image"><div class="dish-text" >Lasagna</div></a></li>
+        <li><a href="recipes/apple-pie.html"><img src="../images/apple-pie.jpg" alt="apple pie image" class="dish-image"><div class="dish-text">Apple Pie</div></a></li>
+        <li><a href="recipes/butter-chicken.html"><img src="../images/butter-chicken.jpg" alt="butter chicken image" class="dish-image"><div class="dish-text">Butter Chicken</div></a></li>
     </ul>
+    <ul>
+        <li><a href="#"><img src="../images/comingsoon.png" alt="coming soon" class="dish-image"><div class="dish-text" >Upcoming Dish</div></a></li>
+        <li><a href="#"><img src="../images/comingsoon.png" alt="coming soon" class="dish-image"><div class="dish-text" >Upcoming Dish</div></a></li>
+        <li><a href="#"><img src="../images/comingsoon.png" alt="coming soon" class="dish-image"><div class="dish-text" >Upcoming Dish</div></a></li>
+    </ul>
+
+    <!-- change link colours -->
+    <!-- add more dishes (coming soon) -->
+    <!-- make site dark mode -->
 
 </body>
 </html>
